@startuml

entity Project{
*id: string <<generated>>
--
*ownerId: string <<FK>>
--
*name: string
createdAt: date
updatedAt: date
}


entity User{
*id: string <<generated>>
--
*email: string
*password: string
role: string
createdAt: date
updatedAt: date
}

entity ProjectUser{
*id: string <<generated>>
--
*projectId: string <<FK>>
*userId: string <<FK>>
--
createdAt: date
updatedAt: date
}

entity Todo{
*id: string <<generated>>
--
*projectId: string<<FK>>
*author: string<<FK>>
linkedTodo: string <<FK>>
--
*title: string
*status: Status
completedAt: date
createdAt: date
updatedAt: date
}

Project ||..o| User
Project  ||..o{ ProjectUser
User  ||..o{ ProjectUser
User  ||..o{ Todo
Project  ||..o{ Todo
Todo |o..o| Todo

@enduml
